--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,24 @@
-
 body{
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+}
+.header{
+  background-color: #1f2937;
+  color: white;
+  padding: 20px 400px;
+  padding-bottom: 100px;
+}
+.header-logo{
+  font-size: 24px;
+  color: #f9faf8;
+  margin-right: auto;
+}
+.link{
+  font-size: 18px;
+  color: #e5e7eb;
+}
+.top-header{
+  display: flex;
+  gap: 20px;
 }
