--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,21 @@ h1{
   width: 300px;
   height: auto;
 }
+
+
+.quote{
+  display: flex;
+  flex-direction: column;
+  background-color: #e5e7eb;
+  padding: 20px 400px ;
+}
+.quote-text{
+  font-size: 36px;
+  color: #1f2937;
+  font-style: italic;
+  align-self: center;
+}
+.quote-author{
+  align-self: flex-end;
+  font-size: 24px;
+}
