--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .header{
   background-color: #1f2937;
@@ -100,4 +103,14 @@ h1{
 }
 #footer-button{
   border: 1px solid #e5e7eb;
+}
+
+
+.footer{
+  background-color: #1f2937;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #f9faf8;
 }
